# projectpad2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  build-static-cli.sh  com.github.emmanueltouzery.projectpad-cli.json  run_tests.sh
flatpak/: com.github.emmanueltouzery.projectpad.metainfo.xml  flatpak_get_sources.sh
ppcli/: Cargo.toml
ppcli/shell/: integration.zsh
ppcli/src/: actions.rs  autoupgrade.rs  config.rs  database.rs  main.rs  secretservice_linux.rs
projectpad/: Cargo.toml  build.rs  com.github.emmanueltouzery.projectpad.desktop
projectpad-cli/: Cargo.toml
projectpad-cli/src/: actions.rs  database.rs  main.rs  secretservice_generic.rs  secretservice_linux.rs
projectpad-gtk4/: Cargo.toml  build.rs  com.github.emmanueltouzery.projectpad.desktop
projectpad-gtk4/resources/migrations/: 002.sql  003.sql  006.sql  008.sql  009.sql  010.sql  013.sql  016.sql  017.sql
projectpad-gtk4/src/: app.rs  gtk_builder.ui  import_export_dtos.rs  import_export_ui.rs  keyring_helpers.rs  main.rs  notes.rs  preferences_dialog.rs  projectpad.gresource.xml.in  projectpad.gresource.xml.in.gresource  search_engine.rs  shortcuts.ui  sql_util.rs  string_sidecar_object.rs  style.css  unlock_db_dialog.rs  win.rs  win.ui
projectpad-gtk4/src/widgets/: edit_mode_switch.rs  environment_list_picker.rs  environment_list_picker.ui  environment_picker.rs  mod.rs  move_project_item.rs  project_badge.rs  project_edit.rs  project_edit.ui  project_item.rs  project_item.ui  project_item_header_row.ui  project_item_list.rs  project_item_list.ui  project_item_list_model.rs  project_item_model.rs  project_item_row.rs  project_item_row.ui  project_list.rs  project_list.ui  search_bar.rs
projectpad-gtk4/src/widgets/project_items/: common.rs  file_picker_action_row.rs  item_header_edit.rs  item_header_edit.ui  item_header_view.rs  item_header_view.ui  mod.rs  note.rs  note_actions.rs  password_action_row.rs  project_item_header_edit.rs  project_item_header_edit.ui  project_item_header_view.rs  project_item_header_view.ui  project_poi.rs  project_poi_view_edit.rs  projectpad_item_action_row.rs  projectpad_item_picker_action_row.rs  server.rs  server_link.rs  server_view_edit.rs
projectpad-gtk4/src/widgets/project_items/server_items/: mod.rs  server_database_view_edit.rs  server_extra_user_account_view_edit.rs  server_item_copy_dialog.rs  server_poi_view_edit.rs  server_website_view_edit.rs
projectpad-gtk4/src/widgets/search/: mod.rs  search_item_header_row.ui  search_item_list.rs  search_item_list.ui  search_item_list_model.rs  search_item_model.rs  search_item_row.ui  search_picker.rs  search_picker.ui
projectpad/resources/: style.css
projectpad/resources/migrations/: 001.sql  004.sql  005.sql  007.sql  011.sql  012.sql  014.sql  015.sql  017.sql  018.sql  019.sql  020.sql  021.sql  022.sql
projectpad/src/: config.rs  export.rs  icons.gresource  icons.rs  import.rs  import_export.rs  import_export_dtos.rs  main.rs  notes.rs  sql_thread.rs  sql_util.rs
projectpad/src/widgets/: environment_list_item.rs  keyring_helpers.rs  mod.rs  password_field.rs  project_badge.rs  project_items_list.rs  project_list.rs  project_poi_contents.rs  project_poi_header.rs  project_poi_item_list_item.rs  project_poi_list_item.rs  project_search_header.rs  project_summary.rs  search_bar.rs  search_engine.rs  search_view.rs  search_view_render.rs  server_add_edit_dlg.rs  server_database_list_item.rs  server_extra_user_list_item.rs  server_item_list_item.rs  server_note_list_item.rs  server_poi_contents.rs  server_poi_list_item.rs  server_website_list_item.rs  shortcuts.ui  title_subtitle_btn.rs  tooltips_overlay.rs  win.rs  wintitlebar.rs
projectpad/src/widgets/dialogs/: auth_key_button.rs  change_db_password_dlg.rs  dialog_helpers.rs  environment_picker.rs  environments_picker.rs  file_contents_button.rs  import_export_dlg.rs  mod.rs  note_edit.rs  pick_projectpad_item_button.rs  preferences.rs  project_add_edit_dlg.rs  project_add_item_dlg.rs  project_item_move_dlg.rs  project_note_add_edit_dlg.rs  project_poi_add_edit_dlg.rs  server_add_edit_dlg.rs  server_add_item_dlg.rs  server_database_add_edit_dlg.rs  server_extra_user_add_edit_dlg.rs  server_link_add_edit_dlg.rs  server_note_add_edit_dlg.rs  server_poi_add_edit_dlg.rs  server_website_add_edit_dlg.rs  standard_dialogs.rs  unlock_db_dlg.rs
projectpadsql/: Cargo.toml
projectpadsql/src/: lib.rs  models.rs  schema.rs
src/: actions.rs  config.rs  database.rs  main.rs
