[package]
name = "projectpad-cli"
version = "0.1.0"
authors = ["Emmanuel Touzery <etouzery@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyring = "0.8.0"
skim = "0.8.0"
libc = "0.2.67"

[dependencies.rusqlite]
version = "0.21.0"
features = ["sqlcipher"]
