[package]
name = "ppcli"
version = "0.1.0"
authors = ["Emmanuel Touzery <etouzery@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
dirs = "3.0.1"
shell-words = "1.0.0"
projectpadsql = { path = "../projectpadsql" }
diesel = { version = "1.4.5", features = ["sqlite"] }

skim = "0.9.2"

# on linux depend on zbus to get the keyring info, that way
# we have a pure rust solution and can hope to statically link
# custom git repo, workaround for https://gitlab.freedesktop.org/zeenix/zbus/-/issues/104
[target.'cfg(target_os = "linux")'.dependencies]
serde = "1.0.117"
zbus = "1.3.0"
zvariant = "2.3.0"
zvariant_derive = "2.3.0"

# on non-linux, use the keyring crate
[target.'cfg(not(target_os = "linux"))'.dependencies]
keyring = "0.10.0"
