[package]
name = "ppcli"
version = "2.3.0"
authors = ["Emmanuel Touzery <etouzery@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.81"
dirs = "3.0.1"
shell-words = "1.0.0"
projectpadsql = { path = "../projectpadsql" }
diesel = { version = "1.4.7", features = ["sqlite"] }

skim = "0.9.4"
regex = "1.4.2"
structopt = "0.3.21"
strum = "0.20.0"
strum_macros = "0.20.1"

# on linux depend on zbus to get the keyring info, that way
# we have a pure rust solution and can hope to statically link
[target.'cfg(target_os = "linux")'.dependencies]
serde = "1.0.118"
zbus = "1.7.0"
zvariant = "2.4.0"
zvariant_derive = "2.4.0"

# on non-linux, use the keyring crate
[target.'cfg(not(target_os = "linux"))'.dependencies]
keyring = "0.10.1"
