[package]
name = "projectpad-cli"
version = "0.1.0"
authors = ["Emmanuel Touzery <etouzery@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
dirs = "3.0.1"
shell-words = "1.0.0"
strum = "0.19.5"
strum_macros = "0.19.4"
projectpadsql = { path = "../projectpadsql" }

# need a newer version of skim than the latest published
# on crates.io as of now, to get command history support.
skim = { git = "https://github.com/lotabout/skim", rev = "a13bd4b1bff401b520c8566f5feffbf50c801169" }

# the clipboard situation on rust is a little messy..
# there is clipboard, with no wayland support and no
# support for keeping the clipboard contents after the
# process exits. https://github.com/aweinstock314/rust-clipboard/issues/61
# there is copypasta, with wayland support but also
# the same issue of clearing after exit.
# clipboard-ext has no wayland support but at least
# doesn't clear the clipboard after exit on x11..
clipboard-ext = "0.2.0"

[dependencies.rusqlite]
version = "0.23.1" # can't have newer for now because diesel is holding libsqlite3-sys back for rusqlite
features = ["sqlcipher"]
