[package]
name = "projectpad-cli"
version = "0.1.0"
authors = ["Emmanuel Touzery <etouzery@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
dirs = "3.0.1"
shell-words = "1.0.0"
projectpadsql = { path = "../projectpadsql" }
diesel = { version = "1.4.5", features = ["sqlite"] }

skim = "0.9.2"
