[package]
name = "projectpad-gtk4"
version = "0.1.0"
edition = "2021"

[build-dependencies]
reqwest = { version = "0.11.0", features = ["blocking"] }
flate2 = "1.0.20"
tar = "0.4.32"
includedir_codegen = "0.6.0"


[dependencies]
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_14"] }
cairo-rs = "0.19.4"
pango = "0.19.3"
glib = "0.19.4"
gio = "0.19.4"
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_5"] }
projectpadsql = { path = "../projectpadsql" }
diesel = { version = "2.0.4", features = ["sqlite"] }
includedir = "0.6.0"
phf = "0.8.0"
keyring = "0.10.1"
async-channel = "2.1.1"
itertools = "0.10.0"
strum = "0.25.0"
strum_macros = "0.25.3"
pulldown-cmark = { version = "0.8.0", default-features = false }
sourceview5 = "0.8.0"
graphene-rs = "0.19.2"
gsk4 = "0.8.1"
