[package]
name = "projectpad-gtk4"
version = "0.1.0"
edition = "2021"

[build-dependencies]
reqwest = { version = "0.11.0", features = ["blocking"] }
flate2 = "1.0.20"
tar = "0.4.32"
includedir_codegen = "0.6.0"


[dependencies]
gtk = { version = "^0.9", package = "gtk4", features = ["v4_14"] }
cairo-rs = "^0.20"
pango = "^0.20"
glib = "^0.20"
gio = "^0.20"
adw = { version = "^0.7", package = "libadwaita", features = ["v1_6"] }
gsk4 = "^0.9"
graphene-rs = "^0.20"
sourceview5 = "^0.9"
projectpadsql = { path = "../projectpadsql" }
diesel = { version = "2.0.4", features = ["sqlite"] }
includedir = "0.6.0"
phf = "0.8.0"
keyring = "0.10.1"
async-channel = "2.1.1"
itertools = "0.10.0"
strum = "0.25.0"
strum_macros = "0.25.3"
pulldown-cmark = { version = "0.8.0", default-features = false }
serde = "1.0.123"
serde_derive = "1.0.123"
serde_yaml = "0.8.17"
regex = "1.4.3"
